test/types/string/dmk/oobbyte3.good
oobbyte3.chpl:1: error: index 20 out of bounds for string with 11 bytes
