test/types/string/dmk/oobbyte3.chpl
writeln("événement".byte(20));
